# mipo

./: .hgignore  Cargo.toml  README  TODO.txt  leyline.txt
.cargo/: config.toml
.hglf/assets/: output_USGS10m.tif
assets/: readme.txt  torus1.stl
src/: asset_cache.rs  bevy_rtin.rs  camera.rs  enemy.rs  geometry.rs  hitpoints.rs  lib.rs  main.rs  mana.rs  palette.rs  physics.rs  player.rs  player_hud.rs  prelude.rs  rtin.rs  world.rs
src/components/: mod.rs
src/components/ui/: button.rs  mod.rs
src/items/: fireball.rs  mod.rs  platforms.rs  spinner.rs
src/objects/: mod.rs  targets.rs
src/routes/: hud_route.rs  mod.rs  spinner_config.rs
