[package]
name = "mipo"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
anyhow = "1.0.86"
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_third_person_camera = "0.1.10"
ciborium = { version = "^0.2.2", optional = true }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.21"
nalgebra = "0.32.6"
serde = { version = "^1.0", optional = true,  features = ["derive"] }

[features]
serde = ["dep:serde", "dep:ciborium"]

[[bin]]
name = "rtin"
path = "src/bin/rtin.rs"


[[bin]]
name = "main"
path = "src/main.rs"
