[package]
name = "mipo"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0-rc.3", features = ["dynamic_linking"] }
bevy-inspector-egui = {  path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_log = "0.14.0-rc.3"
bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex" }
bevy_rapier3d = { version = "0.27.0-rc.1",  features = [ "simd-stable", "debug-render-3d" ] }
bevy_stl = "^0.14.0"
ciborium = { version = "^0.2.2", optional = true }
clap = { version = "4.5.7", features = ["derive"] }
colorgrad = "0.6.2"
env_logger = "0.11.3"
glam = { version = ">=0.25.0" }
image = "0.25.1"
log = "0.4.21"
num-traits = "0.2.19"
serde = { version = "^1.0", optional = true,  features = ["derive"] }
smooth-bevy-cameras = "0.11.0"
tiff = "0.9.1"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:ciborium" , "glam/serde" ]

[[bin]]
name = "rtin"
path = "src/bin/rtin.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# Compile performance optimizations recommended by bevy:
# https://bevyengine.org/learn/quick-start/getting-started/setup/

[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level =  3

[profile.release]
# strip = "symbols"
lto = "thin"

[patch.crates-io]
smooth-bevy-cameras = { path = "../smooth-bevy-cameras" }
bevy_stl = { path = "../bevy_stl" }
